--- a/rtl/amiga/Makefile.fpc
+++ b/rtl/amiga/Makefile.fpc
@@ -15,7 +15,7 @@ implicitunits=$(SYSINITUNITS) $(EXEUNITS) athreads $(DOSUNIT) $(SYSUTILSUNIT) $(
       $(UFLOAT128UNIT)  $(UFLOATX80UNIT) $(SFPU128UNIT) $(SFPUX80UNIT) $(SOFTFPUUNIT) 
 
 
-rsts=$(MATHUNIT) $(RTLCONSTSUNIT) typinfo classes $(SYSCONSTUNIT)
+rsts=$(MATHUNIT) $(RTLCONSTSUNIT) $(TYPINFOUNIT) classes $(SYSCONSTUNIT)
 
 [require]
 nortl=y
