--- a/rtl/linux/Makefile.fpc
+++ b/rtl/linux/Makefile.fpc
@@ -21,7 +21,7 @@ units=$(SYSTEMUNIT) $(FPINTRESUNIT) $(SYSINIT_UNITS) \
 
 implicitunits=$(EXEINFOUNIT) $(CP_UNITS) $(UNICODEDATAUNIT)
 
-rsts=$(MATHUNIT) typinfo $(SYSCONSTUNIT) $(RTLCONSTSUNIT)
+rsts=$(MATHUNIT) $(TYPINFOUNIT) $(SYSCONSTUNIT) $(RTLCONSTSUNIT)
 
 [require]
 nortl=y
