Replace all objpas$(PPUEXT) by $(OBJPASUNIT)$(PPUEXT) in inc/Makefile.rtl

--- a/rtl/inc/Makefile.rtl
+++ b/rtl/inc/Makefile.rtl
@@ -703,7 +703,7 @@ objpas$(PPUEXT): $(OBJPAS_DEPS)
 # macpas
 
 MACPAS_DEPS=$(INC)/macpas.pp \
-            objpas$(PPUEXT) $(MATHUNIT)$(PPUEXT) $(SYSTEMUNIT)$(PPUEXT) \
+            $(OBJPASUNIT)$(PPUEXT) $(MATHUNIT)$(PPUEXT) $(SYSTEMUNIT)$(PPUEXT) \
             $(MACPAS_DEPS_OS)  $(MACPAS_DEPS_CPU)
 
 macpas$(PPUEXT) : $(MACPAS_DEPS)
@@ -755,7 +755,7 @@ heaptrc$(PPUEXT) : $(HEAPTRC_DEPS)
 # softfpu
 
 SOFTFPU_DEPS=$(INC)/softfpu.pp \
-             $(SYSTEMUNIT)$(PPUEXT) objpas$(PPUEXT) \
+             $(SYSTEMUNIT)$(PPUEXT) $(OBJPASUNIT)$(PPUEXT) \
              $(SOFTFPU_DEPS_OS) $(SOFTFPU_DEPS_CPU)
 
 softfpu$(PPUEXT) : $(SOFTFPU_DEPS) 
@@ -766,7 +766,7 @@ System.SoftFPU$(PPUEXT) : $(NSINC)/System.SoftFPU.pp $(SOFTFPU_DEPS)
 
 # sfpux80
 SFPUX80_DEPS=$(INC)/sfpux80.pp $(INC)/softfpu.pp \
-             $(SYSTEMUNIT)$(PPUEXT) objpas$(PPUEXT) \
+             $(SYSTEMUNIT)$(PPUEXT) $(OBJPASUNIT)$(PPUEXT) \
              $(SFPUX80_DEPS_OS) $(SFPUX80_DEPS_CPU) 
  
 sfpux80$(PPUEXT) : $(SFPUX80_DEPS)
@@ -777,7 +777,7 @@ System.SoftFpuX80$(PPUEXT) : $(NSINC)/System.SoftFpuX80.pp  $(SFPUX80_DEPS)
 
 # sfpu128
 SFPU128_DEPS=$(INC)/sfpu128.pp $(INC)/softfpu.pp \
-             $(SYSTEMUNIT)$(PPUEXT) objpas$(PPUEXT) \
+             $(SYSTEMUNIT)$(PPUEXT) $(OBJPASUNIT)$(PPUEXT) \
              $(SFPU128_DEPS_OS) $(SFPU128_DEPS_CPU)
  
 
@@ -847,7 +847,7 @@ System.Ports$(PPUEXT) :  $(NSINC)/System.Ports.$(PORTSUNITEXT) $(PORTS_DEPS)
 # Dynlibs
 #
 DYNLIBS_DEPS=$(INC)/dynlibs.pas $(DYNLIBSINCDIR)/dynlibs.inc \
-             objpas$(PPUEXT) $(RTLCONSTSUNIT)$(PPUEXT) $(SYSUTILSUNIT)$(PPUEXT) \
+             $(OBJPASUNIT)$(PPUEXT) $(RTLCONSTSUNIT)$(PPUEXT) $(SYSUTILSUNIT)$(PPUEXT) \
              $(DYNLIBS_DEPS_OS) $(DYNLIBS_DEPS_CPU)
 
 ifdef DYNLIBSINCDIR
@@ -877,7 +877,7 @@ System.InitC$(PPUEXT) : $(NSINC)/System.InitC.pp  $(INITC_DEPS)
 #
 # UnixCP
 #
-UNIXCP_DEPS=$(UNIXINC)/unixcp.pp $(SYSTEMUNIT)$(PPUEXT) objpas$(PPUEXT) $(BASEUNIXUNIT)$(PPUEXT) \
+UNIXCP_DEPS=$(UNIXINC)/unixcp.pp $(SYSTEMUNIT)$(PPUEXT) $(OBJPASUNIT)$(PPUEXT) $(BASEUNIXUNIT)$(PPUEXT) \
         $(UNIXCP_DEPS_OS) $(UNIXCP_DEPS_CPU)
 
 unixcp$(PPUEXT) : $(UNIXCP_DEPS)
@@ -919,7 +919,7 @@ LinuxApi.Vcs$(PPUEXT): $(NSOSDIR)/LinuxApi.Vcs.pp $(LINUXVCS_DEPS)
 #
 FPCYLIX_DEPS=../linux/fpcylix.pp \
              $(CTHREADSUNIT)$(PPUEXT) $(CWSTRINGUNIT)$(PPUEXT) $(DYNLIBSUNIT)$(PPUEXT) \
-             objpas$(PPUEXT) $(SYSTEMUNIT)$(PPUEXT) \
+             $(OBJPASUNIT)$(PPUEXT) $(SYSTEMUNIT)$(PPUEXT) \
              $(FPCYLIX_DEPS_OS)  $(FPCYLIX_DEPS_CPU)
 
 
@@ -993,7 +993,7 @@ ifeq ($(filter -dFPC_USE_LIBC,$(FPCOPT)),)
 endif
 
 SYSUTILS_DEPS=$(SYSUTILSDIR)/sysutils.pp $(wildcard $(OBJPASDIR)/$(SYSUTILSUNIT)/*.inc) \
-              $(SYSTEMUNIT)$(PPUEXT) objpas$(PPUEXT) $(SYSCONSTUNIT)$(PPUEXT) \
+              $(SYSTEMUNIT)$(PPUEXT) $(OBJPASUNIT)$(PPUEXT) $(SYSCONSTUNIT)$(PPUEXT) \
               $(SYSUTILS_DEPS_OS) $(SYSUTILS_DEPS_CPU)
 
 sysutils$(PPUEXT) : $(SYSUTILS_DEPS)
@@ -1006,7 +1006,7 @@ System.SysUtils$(PPUEXT) : $(NSINC)/System.SysUtils.pp $(SYSUTILS_DEPS)
 # Classes
 #
 CLASSES_DEPS=$(CLASSESDIR)/classes.pp $(wildcard $(OBJPASDIR)/$(CLASSESUNIT)/*.inc) \
-	     $(SYSTEMUNIT)$(PPUEXT) objpas$(PPUEXT) \
+	     $(SYSTEMUNIT)$(PPUEXT) $(OBJPASUNIT)$(PPUEXT) \
              $(SYSUTILSUNIT)$(PPUEXT) $(TYPINFOUNIT)$(PPUEXT) $(RTLCONSTSUNIT)$(PPUEXT) \
              $(FGLUNIT)$(PPUEXT) $(TYPESUNIT)$(PPUEXT) \
              $(CLASSES_DEPS_OS) $(CLASSES_DEPS_CPU)
@@ -1021,7 +1021,7 @@ System.Classes$(PPUEXT) : $(NSINC)/System.Classes.pp $(CLASSES_DEPS)
 # TypInfo
 #
 TYPINFO_DEPS=$(OBJPASDIR)/typinfo.pp \
-             objpas$(PPUEXT) $(SYSUTILSUNIT)$(PPUEXT) $(RTLCONSTSUNIT)$(PPUEXT) \
+             $(OBJPASUNIT)$(PPUEXT) $(SYSUTILSUNIT)$(PPUEXT) $(RTLCONSTSUNIT)$(PPUEXT) \
              $(TYPINFO_DEPS_OS) $(TYPINFO_DEPS_CPU)
 
 typinfo$(PPUEXT): $(TYPINFO_DEPS)
@@ -1035,7 +1035,7 @@ System.TypInfo$(PPUEXT): $(NSINC)/System.TypInfo.pp $(TYPINFO_DEPS)
 # let it depend on buildcollations to prevent simultaneous building of $(UNICODEDATAUNIT)
 
 CHARACTER_DEPS=$(OBJPASDIR)/character.pas \
-               $(SYSUTILSUNIT)$(PPUEXT) objpas$(PPUEXT) $(RTLCONSTSUNIT)$(PPUEXT) \
+               $(SYSUTILSUNIT)$(PPUEXT) $(OBJPASUNIT)$(PPUEXT) $(RTLCONSTSUNIT)$(PPUEXT) \
                $(CHARACTER_DEPS_OS) $(CHARACTER_DEPS_CPU)
 
 character$(PPUEXT): $(CHARACTER_DEPS)
@@ -1048,7 +1048,7 @@ System.Character$(PPUEXT): $(NSINC)/System.Character.pas $(CHARACTER_DEPS)
 # Math
 #
 MATH_DEPS= $(OBJPASDIR)/math.pp $(PROCINC)/mathu.inc \
-           objpas$(PPUEXT) $(SYSUTILSUNIT)$(PPUEXT) $(SYSTEMUNIT)$(PPUEXT) \
+           $(OBJPASUNIT)$(PPUEXT) $(SYSUTILSUNIT)$(PPUEXT) $(SYSTEMUNIT)$(PPUEXT) \
            $(MATH_DEPS_OS) $(MATH_DEPS_CPU)
 
 math$(PPUEXT): $(MATH_DEPS)
@@ -1061,7 +1061,7 @@ System.Math$(PPUEXT): $(NSINC)/System.Math.pp $(MATH_DEPS)
 # FGL
 #
 FGL_DEPS=$(OBJPASDIR)/fgl.pp \
-          objpas$(PPUEXT) $(TYPESUNIT)$(PPUEXT) $(SYSTEMUNIT)$(PPUEXT) \
+          $(OBJPASUNIT)$(PPUEXT) $(TYPESUNIT)$(PPUEXT) $(SYSTEMUNIT)$(PPUEXT) \
           $(SYSUTILSUNIT)$(PPUEXT) $(SORTBASEUNIT)$(PPUEXT) \
 	  $(RTLCONSTSUNIT)$(PPUEXT) \
           $(FGL_DEPS_OS) $(FGL_DEPS_CPU)
@@ -1076,7 +1076,7 @@ System.FGL$(PPUEXT) : $(NSINC)/System.FGL.pp $(FGL_DEPS)
 # Types
 #
 TYPES_DEPS=$(OBJPASDIR)/types.pp \
-           objpas$(PPUEXT) $(MATHUNIT)$(PPUEXT) $(SYSTEMUNIT)$(PPUEXT) \
+           $(OBJPASUNIT)$(PPUEXT) $(MATHUNIT)$(PPUEXT) $(SYSTEMUNIT)$(PPUEXT) \
            $(TYPES_DEPS_OS) $(TYPES_DEPS_CPU)
  
 types$(PPUEXT) : $(TYPES_DEPS)
@@ -1089,7 +1089,7 @@ System.Types$(PPUEXT) :  $(NSINC)/System.Types.pp $(TYPES_DEPS)
 # SysConst
 #
 SYSCONST_DEPS=$(OBJPASDIR)/sysconst.pp \
-              objpas$(PPUEXT) $(SYSTEMUNIT)$(PPUEXT) \
+              $(OBJPASUNIT)$(PPUEXT) $(SYSTEMUNIT)$(PPUEXT) \
               $(SYSCONST_DEPS_OS) $(SYSCONST_DEPS_CPU)
             
 sysconst$(PPUEXT) : $(SYSCONST_DEPS)
@@ -1106,14 +1106,14 @@ System.SysConst$(PPUEXT) :  $(NSINC)/System.SysConst.pp $(SYSCONST_DEPS)
 #
 ifdef FPC_DOTTEDUNITS
 RTLCONSTS_DEPS=$(OBJPASDIR)/rtlconsts.pp $(OBJPASDIR)/rtlconst.inc \
-              objpas$(PPUEXT) $(SYSTEMUNIT)$(PPUEXT) \
+              $(OBJPASUNIT)$(PPUEXT) $(SYSTEMUNIT)$(PPUEXT) \
               $(RTLCONSTS_DEPS_OS) $(RTLCONSTS_DEPS_CPU)
 
 System.RtlConsts$(PPUEXT) : $(NSINC)/System.RtlConsts.pp $(RTLCONSTS_DEPS)
         $(COMPILER) -Fi$(OBJPASDIR) $(RTLCONSTS_OPT) $<
 else
 RTLCONSTS_DEPS=$(OBJPASDIR)/$(RTLCONSTSUNIT).pp $(OBJPASDIR)/rtlconst.inc \
-              objpas$(PPUEXT) $(SYSTEMUNIT)$(PPUEXT) \
+              $(OBJPASUNIT)$(PPUEXT) $(SYSTEMUNIT)$(PPUEXT) \
               $(RTLCONSTS_DEPS_OS) $(RTLCONSTS_DEPS_CPU)
 
 $(RTLCONSTSUNIT)$(PPUEXT) : $(RTLCONSTS_DEPS)
@@ -1134,7 +1134,7 @@ CPU_DEPS_CPU:=$(CPU_DEPS_CPU) $(SYSUTILSUNIT)$(PPUEXT)
 endif
 
 CPU_DEPS=$(PROCINC)/cpu.pp \
-         $(SYSTEMUNIT)$(PPUEXT) objpas$(PPUEXT) $(SYSUTILSUNIT)$(PPUEXT) \
+         $(SYSTEMUNIT)$(PPUEXT) $(OBJPASUNIT)$(PPUEXT) $(SYSUTILSUNIT)$(PPUEXT) \
          $(CPU_DEPS_OS) $(CPU_DEPS_CPU)
 
 cpu$(PPUEXT) : $(CPU_DEPS)
@@ -1245,7 +1245,7 @@ System.LineInfo.Gdb$(PPUEXT) : $(NSINC)/System.LineInfo.Gdb.pp $(LNFOGDB_DEPS)
 #
 
 CHARSET_DEPS=$(INC)/charset.pp \
-             $(SYSTEMUNIT)$(PPUEXT) objpas$(PPUEXT) \
+             $(SYSTEMUNIT)$(PPUEXT) $(OBJPASUNIT)$(PPUEXT) \
              $(CHARSET_DEPS_OS) $(CHARSET_DEPS_CPU)
 
 charset$(PPUEXT) : $(CHARSET_DEPS)
@@ -1260,7 +1260,7 @@ System.CharSet$(PPUEXT) : $(NSINC)/System.CharSet.pp $(CHARSET_DEPS)
 
 UNICODEDATA_DEPS = $(OBJPASDIR)/unicodedata.pas $(OBJPASDIR)/unicodedata.inc \
 		   $(OBJPASDIR)/unicodedata_le.inc $(OBJPASDIR)/unicodedata_be.inc \
-		   $(SYSTEMUNIT)$(PPUEXT) objpas$(PPUEXT)
+		   $(SYSTEMUNIT)$(PPUEXT) $(OBJPASUNIT)$(PPUEXT)
 
 unicodedata$(PPUEXT) : $(UNICODEDATA_DEPS)
         $(COMPILER) -Fi$(OBJPASDIR) $(UNICODEDATA_OPT) $<
@@ -1303,7 +1303,7 @@ endif
 endif
 
 FPWIDESTRING_DEPS=$(OBJPASDIR)/fpwidestring.pp $(RTLDEFSINCDIR)/rtldefs.inc \
-		  $(SYSTEMUNIT)$(PPUEXT) objpas$(PPUEXT) $(UNICODEDATAUNIT)$(PPUEXT) \
+		  $(SYSTEMUNIT)$(PPUEXT) $(OBJPASUNIT)$(PPUEXT) $(UNICODEDATAUNIT)$(PPUEXT) \
                   $(CHARACTERUNIT)$(PPUEXT) $(CPALLUNIT)$(PPUEXT) \
                   $(FPWIDESTRING_DEPS_OS) $(FPWIDESTRING_DEPS_CPU)
 
@@ -1317,7 +1317,7 @@ System.FPWideString$(PPUEXT): $(NSINC)/System.FPWideString.pp $(FPWIDESTRING_DEP
 # sortbase
 #
 
-SORTBASE_DEPS=$(INC)/sortbase.pp objpas$(PPUEXT) $(SYSTEMUNIT)$(PPUEXT) \
+SORTBASE_DEPS=$(INC)/sortbase.pp $(OBJPASUNIT)$(PPUEXT) $(SYSTEMUNIT)$(PPUEXT) \
               $(SORTBASE_DEPS_OS) $(SORTBASE_DEPS_CPU) 
 
 sortbase$(PPUEXT) : $(SORTBASE_DEPS)
@@ -1467,7 +1467,7 @@ UnixApi.Errors$(PPUEXT) : $(NSINC)/UnixApi.Errors.pp $(ERRORS_DEPS)
 #
 
 CTHREADS_DEPS=$(UNIXINC)/cthreads.pp $(PTHREADINCDIR)/pthread.inc \
-              $(SYSTEMUNIT)$(PPUEXT) objpas$(PPUEXT) $(UNIXTYPEUNIT)$(PPUEXT) $(UNIXUNIT)$(PPUEXT) \
+              $(SYSTEMUNIT)$(PPUEXT) $(OBJPASUNIT)$(PPUEXT) $(UNIXTYPEUNIT)$(PPUEXT) $(UNIXUNIT)$(PPUEXT) \
               $(BASEUNIXUNIT)$(PPUEXT) $(INITCUNIT)$(PPUEXT) $(DLUNIT)$(PPUEXT) \
               $(CTHREADS_DEPS_OS) $(CTHREADS_DEPS_CPU)
 
@@ -1487,7 +1487,7 @@ ifndef CWSTRINGDIR
 endif
 
 CWSTRING_DEPS=$(CWSTRINGDIR)/cwstring.pp $(CWSTRING_INC) \
-              $(SYSTEMUNIT)$(PPUEXT) objpas$(PPUEXT) $(UNIXTYPEUNIT)$(PPUEXT) $(BASEUNIXUNIT)$(PPUEXT) \
+              $(SYSTEMUNIT)$(PPUEXT) $(OBJPASUNIT)$(PPUEXT) $(UNIXTYPEUNIT)$(PPUEXT) $(BASEUNIXUNIT)$(PPUEXT) \
               $(UNIXUNIT)$(PPUEXT) $(UNIXTYPEUNIT)$(PPUEXT) $(CTYPESUNIT)$(PPUEXT) \
               $(DYNLIBSUNIT)$(PPUEXT) $(UNIXCPUNIT)$(PPUEXT) \
               $(CWSTRING_DEPS_OS) $(CWSTRING_DEPS_CPU) 
@@ -1544,7 +1544,7 @@ objcbase$(PPUEXT) : $(OBJCBASE_DEPS)
 #
 
 BLOCKRTL_DEPS=$(INC)/blockrtl.pp \
-              $(SYSTEMUNIT)$(PPUEXT) objpas$(PPUEXT) $(INITCUNIT)$(PPUEXT) $(CTYPESUNIT)$(PPUEXT) \
+              $(SYSTEMUNIT)$(PPUEXT) $(OBJPASUNIT)$(PPUEXT) $(INITCUNIT)$(PPUEXT) $(CTYPESUNIT)$(PPUEXT) \
               $(BLOCKRTL_DEPS_OS) $(BLOCKRTL_DEPS_CPU)
 
 blockrtl$(PPUEXT) : $(BLOCKRTL_DEPS)
@@ -1562,7 +1562,7 @@ ifndef WININCDIR
   WININCDIR = $(WINDIR)/wininc
 endif
 
-WINDOWS_DEPS=windows.pp $(SYSTEMUNIT)$(PPUEXT) objpas$(PPUEXT) \
+WINDOWS_DEPS=windows.pp $(SYSTEMUNIT)$(PPUEXT) $(OBJPASUNIT)$(PPUEXT) \
              $(WINDOWS_DEPS_OS) $(WINDOWS_DEPS_CPU)
 
 windows$(PPUEXT): $(WINDOWS_DEPS)
