Replace all objpas unit references by $(OBJPASUNIT) OS Makefile.fpc

--- a/rtl/embedded/Makefile.fpc
+++ b/rtl/embedded/Makefile.fpc
@@ -66,7 +66,7 @@ SYSUTILS_DEPS_OS=$(HEAPMGRUNIT)$(PPUEXT)
 # Dos unit, local source
 DOSDIR=.
 # Dos unit uses objfpc mode
-DOS_DEPS_OS=objpas$(PPUEXT)
+DOS_DEPS_OS=$(OBJPASUNIT)$(PPUEXT)
 
 ifeq ($(ARCH),aarch64)
 CPU_UNITS=$(RASPI3UNIT) $(MMIOUNIT) $(MAILBOXUNIT) $(RASPIUARTUNIT) $(GPIOUNIT)
