--- a/rtl/wince/Makefile.fpc
+++ b/rtl/wince/Makefile.fpc
@@ -6,7 +6,7 @@
 main=rtl
 
 [target]
-units=$(SYSTEMUNIT) $(UUCHARUNIT) $(FPINTRESUNIT) $(CTYPESUNIT) objpas $(MACPASUNIT) $(ISO7185UNIT) $(EXTPASUNIT) $(STRINGSUNIT) \
+units=$(SYSTEMUNIT) $(UUCHARUNIT) $(FPINTRESUNIT) $(CTYPESUNIT) $(OBJPASUNIT) $(MACPASUNIT) $(ISO7185UNIT) $(EXTPASUNIT) $(STRINGSUNIT) \
       $(CPU_UNITS)  $(HEAPTRCUNIT) $(LINEINFOUNIT) \
       $(WINDOWSUNIT) $(MESSAGESUNIT) $(DYNLIBSUNIT) \
       $(DOSUNIT) \
