--- a/rtl/freertos/Makefile.fpc
+++ b/rtl/freertos/Makefile.fpc
@@ -12,7 +12,7 @@ loaders=$(LOADERS)
 # not all targets include enough features to build all units so
 # the common units which are not compiled for all CPUs are stored in
 # CPU_SPECIFIC_COMMON_UNITS
-units=$(SYSTEMUNIT) $(CPU_UNITS) $(UUCHARUNIT) objpas $(ISO7185UNIT) $(EXTPASUNIT) heapmgr consoleio  $(CPU_SPECIFIC_COMMON_UNITS) \
+units=$(SYSTEMUNIT) $(CPU_UNITS) $(UUCHARUNIT) $(OBJPASUNIT) $(ISO7185UNIT) $(EXTPASUNIT) heapmgr consoleio  $(CPU_SPECIFIC_COMMON_UNITS) \
 # $(MACPASUNIT) $(ISO7185UNIT) $(STRINGSUNIT)
        $(STRINGSUNIT) \
        $(SORTBASEUNIT) \
@@ -68,7 +68,7 @@ CPU_SPECIFIC_COMMON_UNITS=
 # Dos unit, local source
 DOSDIR=.
 # Dos unit uses objfpc mode
-DOS_DEPS_OS=objpas$(PPUEXT)
+DOS_DEPS_OS=$(OBJPASUNIT)$(PPUEXT)
 
 ifeq ($(ARCH),arm)
 CPU_SPECIFIC_COMMON_UNITS=sysutils $(MATHUNIT) classes $(FGLUNIT) $(MACPASUNIT) $(TYPINFOUNIT) $(TYPESUNIT) $(RTLCONSTSUNIT) $(GETOPTSUNIT) $(LINEINFOUNIT)
